--- a/geomap_indo/webapp/css/style.css
+++ b/geomap_indo/webapp/css/style.css
@@ -3,21 +3,21 @@
 :root {
   --success-color: rgb(152, 216, 170);
   --warning-color: rgb(247, 208, 96);
-  --error-color : rgb(255, 109, 96);
+  --error-color: rgb(255, 109, 96);
 }
 
-.text1 {
-  background-color: rgb(13, 2, 168) !important; /* Change to desired color */
+/* .text1 {
+  background-color: rgb(13, 2, 168) !important; /* Change to desired color 
   color: rgb(228, 9, 9);
-}
+} */
 
-.customClass {
-  background-color: #ff0000; /* Mengubah warna menjadi merah */
-}
+/* .customClass {
+  background-color: #ff0000; /* Mengubah warna menjadi merah
+} */
 
-.biru {
-  background-color: #28a745 !important; /* Hijau untuk Penjualan Tertinggi */
-}
+/* .biru {
+  background-color: #28a745 !important; /* Hijau untuk Penjualan Tertinggi 
+} */
 
 .highest-bar {
   background-color: #28a745 !important; /* Hijau untuk Penjualan Tertinggi */
@@ -37,56 +37,54 @@
 /* ================ LOCAL ID ================ */
 /* Mengubah warna untuk Penjualan Tertinggi */
 #application-geomapindo-display-component---Geomap--_IDGenInteractiveBarChart-bar-positive-0 {
-  background-color: var(--success-color) !important; 
+  background-color: var(--success-color) !important;
 }
 
 /* Mengubah warna untuk Penjualan Rata-rata */
 #application-geomapindo-display-component---Geomap--_IDGenInteractiveBarChart-bar-positive-1 {
-  background-color:  var(--warning-color) !important; 
+  background-color: var(--warning-color) !important;
 }
 
 /* Mengubah warna untuk Penjualan Terendah */
 #application-geomapindo-display-component---Geomap--_IDGenInteractiveBarChart-bar-positive-2 {
-  background-color: var(--error-color) !important; 
+  background-color: var(--error-color) !important;
 }
 
 /* Interactive Bar Chart */
 .sapSuiteIBCSemanticMarker.sapSuiteIBCSemanticGood {
-  background-color: var(--success-color) !important; 
+  background-color: var(--success-color) !important;
 }
 .sapSuiteIBCSemanticMarker.sapSuiteIBCSemanticCritical {
-  background-color: var(--warning-color) !important; 
+  background-color: var(--warning-color) !important;
 }
 .sapSuiteIBCSemanticMarker.sapSuiteIBCSemanticError {
-  background-color: var(--error-color) !important; 
+  background-color: var(--error-color) !important;
 }
 
 /* Generic Tag */
 .sapMGenericTagSuccess .sapMGenericTagWrap {
-    border-color: var(--success-color) !important; 
+  border-color: var(--success-color) !important;
 }
 .sapMGenericTagError .sapMGenericTagWrap {
-    border-color: var(--error-color) !important;
+  border-color: var(--error-color) !important;
 }
-
-
 
 /* ==================  DEPLOY ID  ======================== */
 /* Ketika di deploy, ID dari Bar Chart nya akan berubah seperti dibawah ini */
 
 /* Hijau untuk Penjualan Tertinggi */
 #container-geomapindo---Geomap--_IDGenInteractiveBarChart-bar-positive-0 {
-  background-color: var(--success-color) !important; 
+  background-color: var(--success-color) !important;
 }
 
 /* Kuning untuk Penjualan Rata-rata */
 #container-geomapindo---Geomap--_IDGenInteractiveBarChart-bar-positive-1 {
-  background-color: var(--warning-color) !important; 
+  background-color: var(--warning-color) !important;
 }
 
 /* Merah untuk Penjualan Terendah */
 #container-geomapindo---Geomap--_IDGenInteractiveBarChart-bar-positive-2 {
-  background-color: var(--error-color) !important; 
+  background-color: var(--error-color) !important;
 }
 
 /* ======================================================= */
